--- a/CarAccessories/CarPartsShop/templates/shop/shop_cart.html
+++ b/CarAccessories/CarPartsShop/templates/shop/shop_cart.html
@@ -57,7 +57,7 @@
                                         <span class="price">{{ shop.price }} <span>元</span> </span>
                                     </td>
                                     <td class="tb-remove">
-                                        <a href="" class="action-remove"><span><i class="fa fa-times"
+                                        <a href="javascript:void(0);" class="action-remove" onclick="del_cart_shops(this)"><span sid="{{ shop.id }}" hidden="hidden"></span><span><i class="fa fa-times"
                                                                                   aria-hidden="true"></i></span></a>
                                     </td>
                                 </tr>
