--- a/CarAccessories/CarPartsShop/templates/shop/shop_list.html
+++ b/CarAccessories/CarPartsShop/templates/shop/shop_list.html
@@ -82,16 +82,16 @@
                         <div class="pagination">
                             <ul class="nav-links">
                                <li class="active"><a href="#">当前 第 {{ page }} 页</a></li>
-                               <li ><a href="/shop/shop_list/p/1/">首页</a></li>
+                               <li ><a class="turnpage" href="/shop/shop_list/p/1/">首页</a></li>
 
                                 {% if page_obj.has_previous %}
-                                <li class="back-next"><a href="/shop/shop_list/p/{{ page_obj.previous_page_number }}/">上一页</a></li>
+                                <li class="back-next"><a class="turnpage" href="/shop/shop_list/p/{{ page_obj.previous_page_number }}/">上一页</a></li>
                                 {% endif %}
                                 {% for p in page_list %}
-                                <li><a href="/shop/shop_list/p/{{ p }}/">{{ p }}</a></li>
+                                <li><a class="turnpage" href="/shop/shop_list/p/{{ p }}/">{{ p }}</a></li>
                                 {% endfor %}
                                 {% if page_obj.has_next %}
-                                <li class="back-next"><a href="/shop/shop_list/p/{{ page_obj.next_page_number }}/">下一页</a></li>
+                                <li class="back-next"><a class="turnpage" href="/shop/shop_list/p/{{ page_obj.next_page_number }}/">下一页</a></li>
                                 {% endif %}
                             </ul>
 
@@ -143,11 +143,12 @@
                                      data-dots="false" data-loop="true" data-margin="0"
                                      data-responsive='{"0":{"items":1},"600":{"items":1},"1000":{"items":1}}'>
                                     <div class="owl-ones-row">
+
                                         <div class="product-item style1">
                                             <div class="product-inner">
                                                 <div class="product-thumb">
                                                     <div class="thumb-inner">
-                                                        <a href="#"><img src="assets/images/blog/p1.jpg" alt="p1"></a>
+                                                        <a href="#"><img src="" alt="p1"></a>
                                                     </div>
                                                 </div>
                                                 <div class="product-innfo">
@@ -177,248 +178,7 @@
                                                 </div>
                                             </div>
                                         </div>
-                                        <div class="product-item style1">
-                                            <div class="product-inner">
-                                                <div class="product-thumb">
-                                                    <div class="thumb-inner">
-                                                        <a href="#"><img src="assets/images/blog/p2.jpg" alt="p2"></a>
-                                                    </div>
-                                                </div>
-                                                <div class="product-innfo">
-                                                    <div class="product-name"><a href="#">Lexani Forged</a>
-                                                    </div>
-                                                    <span class="price">
 
-                                                            <ins>$229.00</ins>
-
-                                                            <del>$259.00</del>
-
-                                                        </span>
-                                                    <span class="star-rating">
-
-                                                            <i class="fa fa-star" aria-hidden="true"></i>
-
-                                                            <i class="fa fa-star" aria-hidden="true"></i>
-
-                                                            <i class="fa fa-star" aria-hidden="true"></i>
-
-                                                            <i class="fa fa-star" aria-hidden="true"></i>
-
-                                                            <i class="fa fa-star" aria-hidden="true"></i>
-
-                                                            <span class="review">5 Review(s)</span>
-
-                                                        </span>
-                                                </div>
-                                            </div>
-                                        </div>
-                                        <div class="product-item style1">
-                                            <div class="product-inner">
-                                                <div class="product-thumb">
-                                                    <div class="thumb-inner">
-                                                        <a href="#"><img src="assets/images/blog/p3.jpg" alt="p3"></a>
-                                                    </div>
-                                                </div>
-                                                <div class="product-innfo">
-                                                    <div class="product-name"><a href="#">Custom Mirrors
-                                                    </a></div>
-                                                    <span class="price price-dark">
-
-                                                                <ins>$229.00</ins>
-
-                                                            </span>
-                                                    <span class="star-rating">
-
-                                                            <i class="fa fa-star" aria-hidden="true"></i>
-
-                                                            <i class="fa fa-star" aria-hidden="true"></i>
-
-                                                            <i class="fa fa-star" aria-hidden="true"></i>
-
-                                                            <i class="fa fa-star" aria-hidden="true"></i>
-
-                                                            <i class="fa fa-star" aria-hidden="true"></i>
-
-                                                            <span class="review">5 Review(s)</span>
-
-                                                        </span>
-                                                </div>
-                                            </div>
-                                        </div>
-                                        <div class="product-item style1">
-                                            <div class="product-inner">
-                                                <div class="product-thumb">
-                                                    <div class="thumb-inner">
-                                                        <a href="#"><img src="assets/images/blog/p4.jpg" alt="p4"></a>
-                                                    </div>
-                                                </div>
-                                                <div class="product-innfo">
-                                                    <div class="product-name"><a href="#">Series Intake System </a>
-                                                    </div>
-                                                    <span class="price">
-
-                                                            <ins>$229.00</ins>
-
-                                                            <del>$259.00</del>
-
-                                                        </span>
-                                                    <span class="star-rating">
-
-                                                            <i class="fa fa-star" aria-hidden="true"></i>
-
-                                                            <i class="fa fa-star" aria-hidden="true"></i>
-
-                                                            <i class="fa fa-star" aria-hidden="true"></i>
-
-                                                            <i class="fa fa-star" aria-hidden="true"></i>
-
-                                                            <i class="fa fa-star" aria-hidden="true"></i>
-
-                                                            <span class="review">5 Review(s)</span>
-
-                                                        </span>
-                                                </div>
-                                            </div>
-                                        </div>
-                                    </div>
-                                    <div class="owl-ones-row">
-                                        <div class="product-item style1">
-                                            <div class="product-inner">
-                                                <div class="product-thumb">
-                                                    <div class="thumb-inner">
-                                                        <a href="#"><img src="assets/images/blog/p1.jpg" alt="p1"></a>
-                                                    </div>
-                                                </div>
-                                                <div class="product-innfo">
-                                                    <div class="product-name"><a href="#">Homasy Portable</a></div>
-                                                    <span class="price">
-
-                                                            <ins>$229.00</ins>
-
-                                                            <del>$259.00</del>
-
-                                                        </span>
-                                                    <span class="star-rating">
-
-                                                            <i class="fa fa-star" aria-hidden="true"></i>
-
-                                                            <i class="fa fa-star" aria-hidden="true"></i>
-
-                                                            <i class="fa fa-star" aria-hidden="true"></i>
-
-                                                            <i class="fa fa-star" aria-hidden="true"></i>
-
-                                                            <i class="fa fa-star" aria-hidden="true"></i>
-
-                                                            <span class="review">5 Review(s)</span>
-
-                                                        </span>
-                                                </div>
-                                            </div>
-                                        </div>
-                                        <div class="product-item style1">
-                                            <div class="product-inner">
-                                                <div class="product-thumb">
-                                                    <div class="thumb-inner">
-                                                        <a href="#"><img src="assets/images/blog/p2.jpg" alt="p2"></a>
-                                                    </div>
-                                                </div>
-                                                <div class="product-innfo">
-                                                    <div class="product-name"><a href="#">Lexani Forged</a>
-                                                    </div>
-                                                    <span class="price">
-
-                                                            <ins>$229.00</ins>
-
-                                                            <del>$259.00</del>
-
-                                                        </span>
-                                                    <span class="star-rating">
-
-                                                            <i class="fa fa-star" aria-hidden="true"></i>
-
-                                                            <i class="fa fa-star" aria-hidden="true"></i>
-
-                                                            <i class="fa fa-star" aria-hidden="true"></i>
-
-                                                            <i class="fa fa-star" aria-hidden="true"></i>
-
-                                                            <i class="fa fa-star" aria-hidden="true"></i>
-
-                                                            <span class="review">5 Review(s)</span>
-
-                                                        </span>
-                                                </div>
-                                            </div>
-                                        </div>
-                                        <div class="product-item style1">
-                                            <div class="product-inner">
-                                                <div class="product-thumb">
-                                                    <div class="thumb-inner">
-                                                        <a href="#"><img src="assets/images/blog/p3.jpg" alt="p3"></a>
-                                                    </div>
-                                                </div>
-                                                <div class="product-innfo">
-                                                    <div class="product-name"><a href="#">Custom Mirrors
-                                                    </a></div>
-                                                    <span class="price price-dark">
-
-                                                                <ins>$229.00</ins>
-
-                                                            </span>
-                                                    <span class="star-rating">
-
-                                                            <i class="fa fa-star" aria-hidden="true"></i>
-
-                                                            <i class="fa fa-star" aria-hidden="true"></i>
-
-                                                            <i class="fa fa-star" aria-hidden="true"></i>
-
-                                                            <i class="fa fa-star" aria-hidden="true"></i>
-
-                                                            <i class="fa fa-star" aria-hidden="true"></i>
-
-                                                            <span class="review">5 Review(s)</span>
-
-                                                        </span>
-                                                </div>
-                                            </div>
-                                        </div>
-                                        <div class="product-item style1">
-                                            <div class="product-inner">
-                                                <div class="product-thumb">
-                                                    <div class="thumb-inner">
-                                                        <a href="#"><img src="assets/images/blog/p4.jpg" alt="p4"></a>
-                                                    </div>
-                                                </div>
-                                                <div class="product-innfo">
-                                                    <div class="product-name"><a href="#">Series Intake System </a>
-                                                    </div>
-                                                    <span class="price">
-
-                                                            <ins>$229.00</ins>
-
-                                                            <del>$259.00</del>
-
-                                                        </span>
-                                                    <span class="star-rating">
-
-                                                            <i class="fa fa-star" aria-hidden="true"></i>
-
-                                                            <i class="fa fa-star" aria-hidden="true"></i>
-
-                                                            <i class="fa fa-star" aria-hidden="true"></i>
-
-                                                            <i class="fa fa-star" aria-hidden="true"></i>
-
-                                                            <i class="fa fa-star" aria-hidden="true"></i>
-
-                                                            <span class="review">5 Review(s)</span>
-
-                                                        </span>
-                                                </div>
-                                            </div>
-                                        </div>
                                     </div>
                                 </div>
                             </div>
@@ -438,6 +198,18 @@
     $.ajaxSetup({
             data: {csrfmiddlewaretoken: '{{ csrf_token }}'},
         });
+    change_page();
+    function change_page(self) {
+        var getpath = window.location.search;
+        if(getpath){
+            var temp = document.getElementsByClassName('turnpage');
+            for(var i in temp){
+                var t = $(temp[i]).attr('href').toString()+getpath;
+                $(temp[i]).attr('href', t)
+            }
+        }
+    }
+
     function addcart(shopid){
         var data = {'shopid':shopid,'shopnums':1};
         $.ajax(
